# backend/app/static/swagger.json
@@ -124,6 +124,94 @@
                     }
                 }
             }
+        },
+        "/room": {
+            "get": {
+                "tags": [
+                    "Room"
+                ],
+                "summary": "",
+                "responses": {
+                    "200": {
+                        "description": "There should be array of rooms located in response",
+                        "schema": {
+                            "type": "array",
+                            "properties": {
+                                "object": {
+                                    "id": {
+                                        "type": "int",
+                                        "format": "int32"
+                                    },
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "city": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Room"
+                ],
+                "summary": "",
+                "requestBody": {
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "city": {
+                                        "type": "string",
+                                        "minLength": 1,
+                                        "maxLength": 255
+                                    },
+                                    "capacity": {
+                                        "type": "int",
+                                        "format": "int32"
+                                    },
+                                    "equipment": {
+                                        "type": "string",
+                                        "minLength": 1,
+                                        "maxLength": 255
+                                    },
+                                    "building": {
+                                        "type": "string",
+                                        "minLength": 1,
+                                        "maxLength": 255
+                                    },
+                                    "room_number": {
+                                        "type": "int",
+                                        "format": "int32"
+                                    }
+                                },
+                                "required": [
+                                    "city",
+                                    "building",
+                                    "capacity",
+                                    "room_number"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Response should contain web page where change will be visible",
+                        "schema": {
+                            "$ref": "#/components/schemas/Tenant"
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
